Fix spacing

--- a/src/app/modules/authentication/authentication/pages/registration/registration.component.scss
+++ b/src/app/modules/authentication/authentication/pages/registration/registration.component.scss
@@ -21,8 +21,9 @@ $colorBrightLight: #c28f2c;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0 25px;
+        padding: 0 25px 2px;
         text-align: center;
+        letter-spacing: 1px;
         text-decoration: none;
         color: $colorLight;
         font-size: 16px;
@@ -94,6 +95,7 @@ $colorBrightLight: #c28f2c;
                     margin: 15px 0 10px;
                     font-family: 'Jura', sans-serif;
                     font-size: 16px;
+                    letter-spacing: 1px;
                     font-weight: 900;
                     background-color: $colorDark;
                     color: $colorLight;
@@ -103,20 +105,6 @@ $colorBrightLight: #c28f2c;
                         opacity: .3;
                     }
                 }
-            }
-
-            .or-divider {
-                text-align: center;
-                font-size: 16px;
-                font-weight: 900;
-            }
-
-            .login-link {
-                display: block;
-                text-align: center;
-                font-size: 16px;
-                font-weight: 900;
-                margin-top: 10px;
             }
         }
     }
