--- a/src/app/shared/components/shared-box-header/shared-box-header.component.scss
+++ b/src/app/shared/components/shared-box-header/shared-box-header.component.scss
@@ -11,4 +11,5 @@ $colorBrightLight: #c28f2c;
     padding: 10px 20px;
     font-weight: 900;
     font-size: 20px;
+    letter-spacing: 1px;
 }
